# agentic_ai

./: .env.example  CLAUDE.md  README.md  docker-compose.yml  package-lock.json
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  openapi.yaml  pyproject.toml  ruff.toml  seed_database.py  seed_demo_users.py
backend/alembic/: env.py
backend/alembic/versions/: 2025-12-13_initial.py  2025-12-25_add_all_tables.py  2026-01-12_add_attack_session_table.py  2026-01-12_add_langflow_api_key.py  2026-01-19_add_file_upload_fields_to_attack_session.py
backend/course/: config.json
backend/course/assignments/: knowledge_base_secret_extraction.json  knowledge_base_secret_extraction.md  system_prompt_extraction.json  system_prompt_extraction.md  token_limit_bypass.json  token_limit_bypass.md
backend/course/modules/: attacks.json  auto_attacks.json  guardrails.json  threat_modelling.json
backend/course/prompts/: evaluator_system.md  simulator_system.md  tutor_system.md
backend/course/theory/: prompt_injection_basics.md  system_prompt_extraction.md
backend/src/: base_config.py  config.py  core_config.py  database.py  dependencies.py  exceptions.py  main.py  models.py  schemas.py
backend/src/agents/: __init__.py  instances.py  router.py  theory_retriever.py
backend/tests_agents/: README.md  __init__.py  data_loader.py  evaluator_metrics.py  requirements.txt  run_all_tests.py  test_evaluator_agent.py  test_tutor_agent.py  tutor_metrics.py
backend/tests_integrational/: conftest.py  docker_manager.py  test_course.py  test_health.py  test_users.py
(+197 files in other folders)
