[project]
name = "backend"
version = "0.1.0"
description = "WindChaserSecurity Backend API - AI Security Training Platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.3",
    "pydantic[email]>=2.12.4",
    "pydantic-settings>=2.7.1",
    "uvicorn[standard]>=0.38.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.15.1",
    "pyjwt>=2.10.0",
    "httpx>=0.27.0",
    "bcrypt>=4.2.0",
    "openai>=1.0.0",
    "anthropic>=0.72.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.6",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27.0",
    "docker>=7.0",
]
